--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
     <a class="text-4" >Profile</a>
   </div> 
 
-  <p class="rainbow-text">Hello world!</p>
+  <audio autoplay loop>
+    <source src="nhac/chicolus2.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
 
   
-</body>
+</body> 
 </html>
