--- a/index.html
+++ b/index.html
@@ -77,9 +77,13 @@
     <a class="text-4" >Profile</a>
   </div> 
 
-  <div class="background">
-
+ <audio autoplay loop>
+      <source src="nhac/chicolus2.mp3" type="audio/mpeg">
+ </audio>
   </div>
+
+
+  
   
   
   
