--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Website</title>
    <link rel="stylesheet" href="style.css">
    
    
@@ -15,11 +15,11 @@
 </head>
 <body>
    <div class="card">
-      <img src="anh/anhmeo.jpg">
-      <img src="anh/anhmeo-removebg.png">
+      <img src="anh/anhkbach1.jpg">
+      <img src="anh/anhkbach2.png">
       <div class="content">
           <div class="name"> </div>
-          <div class="fullName">Đào Bá Quý</div>
+          <div class="fullName">Trần Hoàng Kim Bách</div>
       </div>
   </div>
 
@@ -31,24 +31,24 @@
 
     <button class="phone">
         <img src="anh/imgphone.png">
-        <h1>0376986695</h1>
+        <h1>0336661205</h1>
     </button>
 
 
     <button class ="email">
         <img src="anh/th-removebg-preview.png">
-        <h1>daobaquy456456@gmail.com</h1>
+        <h1>bachtrank54thpttt@gmail.com     </h1>
     </button>
 
 
     <button class=" fb" onclick="openNewPage()"> 
         <img src="anh/fb.png">
-        <h1>Đào Quý</h1>
+        <h1>𝑇𝑟𝑎𝑛 𝐻𝑜𝑎𝑛𝑔 𝐾𝑖𝑚 𝐵𝑎𝑐ℎ </h1>
     </button>
 
     <button class="tiktok" onclick="openNewPage1()">
       <img src="anh/th2-removebg-preview.png" >
-      <h1>Luna Dev 👨‍💻</h1>
+      <h1>nguoibocdausongda</h1>
     
 
     </button>
@@ -59,14 +59,14 @@
 
   <script>
     function openNewPage() {
-        window.location.href = "https://www.facebook.com/profile.php?id=100030298212890"; // thay đổi đường dẫn của trang mới tại đây
+        window.location.href = "https://www.facebook.com/k.bach18profile?mibextid=LQQJ4d"; // thay đổi đường dẫn của trang mới tại đây
     }
     </script>
 
 
 <script>
   function openNewPage1() {
-      window.location.href = "https://www.tiktok.com/@daobaquy1904"; // thay đổi đường dẫn của trang mới tại đây
+      window.location.href = "https://www.tiktok.com/@nguoibocdausongda?fbclid=IwAR2WKWt1gSMEkYmpnV8mGvYF4g2reFdF69Vn-Nm7wK2wU0jOz8H7OxmOl2M"; // thay đổi đường dẫn của trang mới tại đây
   }
   </script>
 
