--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Website</title>
 
     <style>
         body{
@@ -25,7 +25,8 @@
   z-index: 0;
         }
         .blink-button{
-            background-color:  transparent;
+            
+            background-color:#4159d000;
             color: #4158d0;
             display: inline-block;
             padding: 15px 30px;
@@ -81,8 +82,7 @@
         }
         .blink-button:hover:before{
         background-color: #4158d0;
-        height: 0%;
-        width: 2px;
+       
             width: 100%;
             height: 100%;
         }
