--- a/testline.html
+++ b/testline.html
@@ -19,3 +19,30 @@
   transform-origin: bottom right;
   animation: animate 6s linear infinite;
   }
+
+
+
+  .blink-button san:nth-child(1){
+    top:0;
+    left:0;
+    width:100%;
+    height:2px;
+}
+.blink-button san:nth-child(2){
+    top:0;
+    left:0;
+    width:2px;
+    height:100%;
+}
+.blink-button san:nth-child(3){
+    bottom:0;
+    left:0;
+    width:100%;
+    height:2px;
+}
+.blink-button san:nth-child(4){
+    bottom: 0;
+    right: 0;
+    width: 2px;
+    height:100%;
+}
